--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/CUFE-Classroom/CUFE-Classroom-Backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "debug": "^4.3.3",
-    "dotenv": "^10.0.0",
+    "debug": "^2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.5.0",
+    "joi-password": "^2.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.7.0"
   }
 }
