--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
   },
   "homepage": "https://github.com/CUFE-Classroom/CUFE-Classroom-Backend#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.5.0",
-    "joi-password": "^2.0.3",
+    "joi-password": "^1.4.4",
+    "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "validator": "^13.7.0"
   }
 }
