--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.1",
+    "mongoose-type-url": "^2.1.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "validator": "^13.7.0"
