--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
+    "fawn-fix": "^2.0.0",
     "joi": "^17.5.0",
     "joi-password": "^1.4.4",
     "joi-password-complexity": "^5.1.0",
