--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
-    "fawn-fix": "^2.0.0",
     "joi": "^17.5.0",
     "joi-password": "^1.4.4",
     "joi-password-complexity": "^5.1.0",
@@ -34,6 +33,7 @@
     "mongoose-type-url": "^2.1.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
+    "pusher": "^5.0.0",
     "validator": "^13.7.0"
   }
 }
