--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CUFE-Classroom/CUFE-Classroom-Backend#readme",
   "dependencies": {
+    "aws-sdk": "^2.1048.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
@@ -24,6 +25,8 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "formidable": "^2.0.1",
+    "googleapis": "^92.0.0",
     "joi": "^17.5.0",
     "joi-password": "^1.4.4",
     "joi-password-complexity": "^5.1.0",
@@ -32,6 +35,9 @@
     "mongoose": "^6.1.1",
     "mongoose-type-url": "^2.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
+    "multiparty": "^4.2.2",
     "nodemailer": "^6.7.2",
     "pusher": "^5.0.0",
     "validator": "^13.7.0"
