--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "env NODE_ENV=development nodemon app.js",
+    "start:prod": "env NODE_ENV=production nodemon app.js",
+    "seed": "env NODE_ENV=development node ./seeds/seeder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "faker": "^5.5.3",
     "fawn": "^2.1.5",
     "formidable": "^2.0.1",
     "googleapis": "^92.0.0",
