--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,20 @@ jobs:
                   --template-file cloudFromation-template.yml \
                   --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                   --region us-east-1
+  configure_infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["d6:c1:bc:4f:55:51:cf:68:d1:c0:1c:51:a6:df:70:aa"]
+      - run: 
+          name: Install Ansible
+          command: apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+              ansible-playbook -i  ./../inventory ./../main.yml
 
   say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
@@ -37,4 +51,5 @@ workflows:
   say-hello-workflow:
     jobs:
       # - say-hello
-      - create_infrastructure
+      # - create_infrastructure
+      - configure_infrastructure
