--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,5 +51,5 @@ workflows:
   say-hello-workflow:
     jobs:
       # - say-hello
-      # - create_infrastructure
-      - configure_infrastructure
+      - create_infrastructure
+      # - configure_infrastructure
